--- a/public/style.css
+++ b/public/style.css
@@ -7,3 +7,26 @@
     position: center;
     
 }
+
+h1 {
+    margin-left: 25%;
+    margin-top: 15%;
+}
+
+input{
+    margin-left: 27%;
+    margin-top: 3%;
+    width: 32%;
+    border: 1px solid black;
+    height: 49px;
+    border-radius: 50px;
+}
+
+.btn{
+    width: 103px;
+    height: 39px;
+    border:1px solid black;
+    border-radius: 28px;
+}
+
+
